crates/config/src/snapshots/config__appearance_file__tests__the_stock_appearance_file_is_every_tables_defaults.snap
---
source: crates/config/src/appearance_file.rs
expression: "TomlAppearance::default()"
---
TomlAppearance {
    card: TomlCard {
        format_chips: Hidden,
        speed_chip: Always,
    },
    progress: TomlProgress {
        height_px: Pixels(
            4,
        ),
        radius: None,
        fill: None,
        groove: None,
        remaining: Elapsed,
    },
    cover: TomlCover {
        mode: Vinyl,
        text_cells: TextCoverCells {
            width: 20,
            height: 8,
        },
        brackets: Hidden,
    },
    layout: TomlLayout {
        full_min_width: 60,
        full_min_height: 19,
        compact_min_width: 30,
        compact_min_height: 13,
        min_columns: 48,
        min_rows: 16,
        mode: Auto,
    },
    window: TomlWindow {
        animations: On,
        key_hints: Shown,
    },
}
