crates/config/src/snapshots/config__appearance_file__tests__the_stock_breakpoints_are_the_documented_defaults.snap
---
source: crates/config/src/breakpoints.rs
expression: "TomlLayout::default()"
---
TomlLayout {
    full_min_width: 60,
    full_min_height: 19,
    compact_min_width: 30,
    compact_min_height: 13,
    min_columns: 48,
    min_rows: 16,
    mode: Auto,
}
