crates/config/src/snapshots/config__appearance_file__tests__unknown_toml_names_the_key@unknown_key.snap
---
source: crates/config/src/appearance_file.rs
expression: error.to_string()
---
unknown field `bogus`, expected one of `size_px`, `style`, `text_cells`, `brackets`
sifr-ui.toml:2
