crates/config/src/snapshots/config__appearance_file__tests__unknown_toml_names_the_key@unknown_table.snap
---
source: crates/config/src/appearance_file.rs
expression: error.to_string()
---
unknown field `nope`, expected one of `music_dir`, `theme`, `volume`, `audio`, `keymap`, `server`, `card`, `progress`, `cover`, `layout`, `window`
config.toml:1
